CLOUD-373: fix vertical scroll for a page to avoid jumping when we have a lot of content on the page
<==== Mercurial data ====>
Branch: cloud_portal_default

--- a/cloud_portal/front_end/app/styles/main.scss
+++ b/cloud_portal/front_end/app/styles/main.scss
@@ -10,6 +10,7 @@
 html {
   position: relative;
   min-height: 100%;
+  overflow-y: scroll; /* CLOUD-373: this is hack: we fix vertical scroll to prevent the page from shaking when it appears or disappears*/
 }
 body {
   /* Margin bottom by footer height */
